Fixed spacing for timeline

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,19 +10,22 @@ body {
 }
 h1{
   font-size: 108px;
-  line-height: 0;
+  line-height: 1;
+  margin: 0;
   text-align: left;
   text-shadow: #a8a8a8 2px 2px 4px;
   color: #151E3F;
 }
 h2 {
   font-size: 48px;
+  margin: 0;
   text-align: left;
   text-shadow: #a8a8a8 2px 2px 4px;
   color: #151E3F
 }
 h3{
   font-size: 30px;
+  margin: 0;
   text-shadow: #a8a8a8 2px 2px 4px;
   color: #151E3F
 }
@@ -35,9 +38,6 @@ p {
 a{
   color:#5386E4;
   text-decoration: none;
-}
-a:clicked {
-  transition: 0.5s;
 }
 .navbar {
   list-style-type: none;
@@ -70,6 +70,9 @@ a:clicked {
   text-align: left;
   align-items: center;
 }
+.subtitles{
+  margin: 15px;
+}
 #about{
   display: grid;
   grid-template-columns: 15% 42% 6% 22% 15%;
@@ -78,10 +81,13 @@ a:clicked {
 }
 .title{
   grid-column-start: 2;
-  grid-column-end: 3;
+  grid-column-end: 4;
   grid-row-start: 2;
   grid-row-end: 3;
-  line-height: 0;
+  line-height: 1;
+}
+.title.about{
+  margin-bottom: 50px;
 }
 .text{
   grid-column-start: 2;
@@ -115,43 +121,60 @@ img {
   grid-row-start: 3;
   grid-row-end: 4;
 }
-.timeline:before{
+.timeline:before{ /* vertical line connecting timeline points */
   background-color: #4C4B63;
   width: 2px;
   content: '';
   position: absolute;
-  top: 110px;
+  top: 80px;
   bottom: 0px;
-  left: 30px;
+  left: 25px;
 }
 .events {
   position: relative;
 }
 .event{
   display: flex;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 .event .marker {
    position: relative;
-   left: -15px;
-   top: 14px;
+   left: -20px;
+   top: 6px;
 }
 .job{
   list-style-type: none;
+  margin-bottom: 24px;
 }
 .jobtitle{
-  line-height: 0;
+  line-height: 1;
   color: #5386E4;
   text-shadow: none;
 }
 .jobsubtitle{
-  line-height: 0;
+  line-height: 1;
   font-size: 18px;
   color: #4C4B63;
-
+  margin: 0;
 }
 .jobdate{
-  line-height: 0;
-  font-size: 16px;
+  line-height: 1;
+  margin: 0;
+  font-size: 24px;
   color: #4C4B63;
+}
+.jobtext{
+  font-size: 18px;
+  line-height: 1;
+  margin-top: 10px;
+}
+.content{
+  font-size: 18px;
+  line-height: 1;
+}
+.skills{
+  grid-column-start: 4;
+  grid-column-end: 6;
+  grid-row-start: 3;
+  grid-row-end: 4;
 }
